# Python_learn

./: Exercise_1_monthly_financial_calc.py  Lesson_10_string_method_practice.py  Lesson_10_string_methods.py  Lesson_11_indexing.py  Lesson_13_practice.py  Lesson_13_while_loop.py  Lesson_14_practice.py  Lesson_16_practice.py  Lesson_18_dictionary.py  Lesson_18_practice.py  Lesson_19_practice.py  Lesson_19_practice_2.py  Lesson_20_practice.py  Lesson_21_function.py  Lesson_22_default_arguments.py  Lesson_23_keyword arguments.py  Lesson_24_args_kwargs.py  Lesson_25_iterables.py  Lesson_26_membership_operators.py  Lesson_27_List_comprehension.py  Lesson_28_match-case(switch).py  Lesson_29_module.py  Lesson_32_banking_prog.py  Lesson_35_hangman_game.py  Lesson_40_Super.py  Lesson_42_Duck_typing.py  Lesson_44_class_methods.py  Lesson_47_decorator.py  Lesson_4_input.py  Lesson_50_writing_files.py  Lesson_51_read_files.py  Lesson_54_multithreading.py  Lesson_57_QLabels.py  Lesson_59_PyQt5_layouts.py  Lesson_62_PyQt5_radio_buttons.py  Lesson_63_PyQt5_text_inputs.py  Lesson_64_seeting_stlye_sheets_PyQt5.py  Lesson_6_practice.py  Lesson_7_if.py  Lesson_7_practice_weight_conv.py  (+7 more)
Automate_the_boring_stuff/: Automate_the_boring_stuff.txt
Basics_course/: Lesson_10_string_methods.py  Lesson_12_format_specifiers.py  Lesson_14_for_loops.py  Lesson_15_nested_loops.py  Lesson_16_collection.py  Lesson_17_2d_lists.py  Lesson_17_practice.py  Lesson_18_dictionary.py  Lesson_19_random_num.py  Lesson_24_args_kwargs.py  Lesson_29_module_ex.py  Lesson_2_variables.py  Lesson_33_slot_machine.py  (+30 more)
(+160 files in other folders)
